[workspace]
members = [
    "crates/atproto-syntax",
    "crates/atproto-crypto",
    "crates/atproto-lex-data",
    "crates/atproto-lex-cbor",
    "crates/atproto-lex-json",
    "crates/atproto-common",
    "crates/atproto-lexicon",
    "crates/atproto-repo",
    "crates/atproto-xrpc",
    "crates/atproto-ws",
    "crates/atproto-identity",
    "crates/atproto-api",
    "crates/atproto-codegen",
    "crates/atproto-oauth",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/atproto-rs"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
atproto-syntax = { path = "crates/atproto-syntax" }
atproto-crypto = { path = "crates/atproto-crypto" }
atproto-lex-data = { path = "crates/atproto-lex-data" }
atproto-lex-cbor = { path = "crates/atproto-lex-cbor" }
atproto-lex-json = { path = "crates/atproto-lex-json" }
atproto-common = { path = "crates/atproto-common" }
atproto-lexicon = { path = "crates/atproto-lexicon" }
atproto-repo = { path = "crates/atproto-repo" }
atproto-xrpc = { path = "crates/atproto-xrpc" }
atproto-ws = { path = "crates/atproto-ws" }
atproto-identity = { path = "crates/atproto-identity" }
atproto-api = { path = "crates/atproto-api" }
atproto-oauth = { path = "crates/atproto-oauth" }

# External dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
once_cell = "1"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
bs58 = "0.5"
multibase = "0.9"
unsigned-varint = "0.8"
base64 = "0.22"
ciborium = "0.2"
unicode-segmentation = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
hickory-resolver = "0.25"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
url = "2"
quote = "1"
proc-macro2 = "1"
syn = "2"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9"
proptest = "1"
