[package]
name = "atproto-examples"
version = "0.0.0"
edition = "2024"
publish = false
rust-version = "1.85"

[dependencies]
atproto-syntax = { path = "../crates/atproto-syntax" }
atproto-crypto = { path = "../crates/atproto-crypto" }
atproto-lex-data = { path = "../crates/atproto-lex-data" }
atproto-lex-cbor = { path = "../crates/atproto-lex-cbor" }
atproto-lex-json = { path = "../crates/atproto-lex-json" }
atproto-common = { path = "../crates/atproto-common" }
atproto-repo = { path = "../crates/atproto-repo" }
atproto-xrpc = { path = "../crates/atproto-xrpc" }
atproto-identity = { path = "../crates/atproto-identity" }
atproto-api = { path = "../crates/atproto-api" }
atproto-oauth = { path = "../crates/atproto-oauth" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
