[package]
name = "proto-blue-codegen"
description = "AT Protocol code generator: Lexicon JSON -> Rust source"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "proto-blue-codegen"
path = "src/main.rs"

[dependencies]
proto-blue-lexicon = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
clap = { workspace = true }
