[package]
name = "atproto-lex-data"
description = "AT Protocol core data types: CID, LexValue, BlobRef"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
multibase = { workspace = true }
unsigned-varint = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
