[package]
name = "atproto-lexicon"
description = "AT Protocol Lexicon schema system: types, registry, and validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
atproto-common = { workspace = true }
atproto-syntax = { workspace = true }
atproto-lex-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
