[package]
name = "proto-blue-syntax"
description = "AT Protocol identifier types: DID, Handle, NSID, AT-URI, TID, RecordKey, Datetime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
regex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
