[package]
name = "atproto-ws"
description = "AT Protocol WebSocket client with auto-reconnection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
atproto-common = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
