[package]
name = "proto-blue-api"
description = "AT Protocol high-level API: agent, rich text, moderation, generated types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
proto-blue-common = { workspace = true }
proto-blue-syntax = { workspace = true }
proto-blue-lexicon = { workspace = true }
proto-blue-xrpc = { workspace = true }
proto-blue-lex-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
unicode-segmentation = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
