[package]
name = "proto-blue-common"
description = "AT Protocol shared utilities: TID generation, DID documents, retry, IPLD helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["atproto", "bluesky", "did-document", "tid", "utilities"]
categories = ["web-programming", "data-structures"]

[dependencies]
proto-blue-syntax = { workspace = true }
proto-blue-lex-data = { workspace = true }
proto-blue-lex-json = { workspace = true }
proto-blue-lex-cbor = { workspace = true }
unicode-segmentation = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
