[package]
name = "proto-blue-identity"
description = "AT Protocol identity resolution: DID and handle resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
proto-blue-common = { workspace = true }
proto-blue-crypto = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
