[package]
name = "proto-blue-lex-data"
description = "AT Protocol core data types: CID, LexValue, BlobRef"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["atproto", "bluesky", "lexicon", "cid", "ipld"]
categories = ["data-structures", "encoding"]

[dependencies]
multibase = { workspace = true }
unsigned-varint = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
