[package]
name = "proto-blue-lex-json"
description = "AT Protocol JSON <-> LexValue conversion with $link and $bytes encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["atproto", "bluesky", "json", "lexicon", "serialization"]
categories = ["encoding", "parser-implementations"]

[dependencies]
proto-blue-lex-data = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
