[package]
name = "proto-blue-lexicon"
description = "AT Protocol Lexicon schema system: types, registry, and validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["atproto", "bluesky", "lexicon", "schema", "validation"]
categories = ["data-structures", "web-programming"]

[dependencies]
proto-blue-common = { workspace = true }
proto-blue-syntax = { workspace = true }
proto-blue-lex-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
