[package]
name = "proto-blue-oauth"
description = "AT Protocol OAuth 2.0 client: DPoP, PKCE, PAR, session management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["atproto", "bluesky", "oauth", "dpop", "pkce"]
categories = ["authentication", "web-programming"]

[dependencies]
proto-blue-identity = { workspace = true }
proto-blue-crypto = { workspace = true }
proto-blue-xrpc = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
p256 = { workspace = true }
