[package]
name = "proto-blue-repo"
description = "AT Protocol repository: MST, CAR files, commits, block storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
proto-blue-common = { workspace = true }
proto-blue-crypto = { workspace = true }
proto-blue-lexicon = { workspace = true }
proto-blue-lex-data = { workspace = true }
proto-blue-lex-cbor = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
unsigned-varint = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
