[package]
name = "proto-blue-ws"
description = "AT Protocol WebSocket client with auto-reconnection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["atproto", "bluesky", "websocket", "streaming", "reconnection"]
categories = ["web-programming", "network-programming"]

[dependencies]
proto-blue-common = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
